# static-tools-analysis

./: .gitignore  .gitmodules  README.md  flake.nix  pyproject.toml
analysis/: go.mod  go.sum  main.go  performance.ipynb  vulnerabilities.ipynb
analysis/internal/benchmark/: runner.go
analysis/internal/config/: config.go
analysis/internal/monitor/: dstat.go
analysis/internal/results/: writer.go
analysis/internal/tool/: ades.go  argus.go  registry.go  tool.go  zizmor.go
test_workflows/: .benchmarkignore  03.yml  06.yml  1.yml  10.yml  11.yml  12.yml  13.yml  14.yml  15.yml  16.yml  17.yml  18.yml  19.yml  2.yml  21.yml  22.yml  23.yml  24.yml  4.yml  5.yml  7.yml  8.yml  9.yml
