[tool.poetry]
name = "Argus"
version = "0.1.0"
description = "A staged static analysis tool for finding security vulnerabilites in workflows"
authors = ["Siddharth Muralee <siddharth.muralee@gmail.com>"]
license = "GPL-3"

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
pathlib = "^1.0.1"
click = "^8.1.3"
GitPython = "^3.1.41"
colorlog = "^6.7.0"
PyYAML = "^6.0"
sarif-om = "^1.0.4"
jschema-to-python = "^1.2.3"
setuptools = "^70.0.0"
ipykernel = "^7.2.0"
pandas = "^3.0.0"
matplotlib = "^3.10.8"
seaborn = "^0.13.2"
numpy = "^2.4.2"
plotly = "^6.6.0"

[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.5.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
argus = "argus:main"
