[project]
name = "static-tools-analysis"
version = "0.1.0"
description = ""
authors = [
    {name = "HenriqueSFernandes",email = "henriquesardofernandes@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel (>=7.3.0,<8.0.0)",
    "pandas (>=3.0.3,<4.0.0)",
    "matplotlib (>=3.11.0,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "numpy (>=2.4.6,<3.0.0)",
    "plotly (>=6.8.0,<7.0.0)",
    "jupyterlab (>=4.6.1,<5.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
